<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context="osucse5236.chooseyourownadventure.ChoiceMenu">

     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="130dp">

        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top|center"
             android:orientation="vertical"
            android:paddingBottom="130dp">
             <TextView
                 android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/character_name"
                 android:text="@string/character_name"
                 android:textSize="15sp"/>

             <TextView
                 android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/hometown"
                 android:text="@string/hometown"
                 android:textSize="15sp"/>

             <TextView
                 android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/progress"
                 android:text="@string/progress"
                 android:textSize="15sp"/>

             <TextView
                 android:paddingTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stats"
                 android:text="STATS"
                 android:textSize="15sp"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stat_1"
                 android:text="@string/stat_1"
                 android:textSize="15sp"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stat_2"
                 android:text="@string/stat_2"
                 android:textSize="15sp"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stat_3"
                 android:text="@string/stat_3"
                 android:textSize="15sp"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stat_4"
                 android:text="@string/stat_4"
                 android:textSize="15sp"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stat_5"
                 android:text="@string/stat_5"
                 android:textSize="15sp"/>

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:gravity="center"
                 android:id="@+id/stat_6"
                 android:text="@string/stat_6"
                 android:textSize="15sp"/>
         </LinearLayout>

    </ScrollView>



    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restart"
            android:text="@string/restart"
            android:textSize="10sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_character"
            android:text="@string/delete_character"
            android:textSize="10sp"/>
    </LinearLayout>

</FrameLayout>
